# s0ixtester

./: .editorconfig  .gitignore  meson.build  s0ixtester-sleep  s0ixtester.spec
src/: help.cpp  help.hpp  main.cpp  measurement.cpp  measurement.hpp  print.cpp  print.hpp  residency.cpp  residency.hpp
